--- a/src/loader.scss
+++ b/src/loader.scss
@@ -11,21 +11,11 @@
   background-color: black;
   color: white;
   z-index: 1000;
-}
+
 
 $transition-duration: 2s;
 $path-length: 157px; // Retrieved using SVG's getTotalLength()
 
-html, body {
-  width: 100%;
-  height: 100%;
-}
-
-body {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
 
 svg {
   overflow: visible;
@@ -79,4 +69,5 @@ svg {
     stroke-dasharray: $path-length $path-length;
     stroke-dashoffset: -($path-length - 1);
   }
+}
 }
